force-app/main/default/objects/Notice_Rule__c/Notice_Rule__c.object-meta.xml
<CustomObject>
    <label>Notice Rule</label>
    <nameField>
        <label>Notice Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notice Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>