force-app/main/default/objects/Notice_Rule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether the notice rule is enforced. Unchecked rules are ignored.</description>
    <inlineHelpText>Unchecked rules are ignored.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>