force-app/main/default/objects/Notice_Rule__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Recipient of the notification.</description>
    <inlineHelpText>Recipient of the notification.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>