force-app/main/default/objects/Notice_Rule__c/fields/Target_Change__c.field-meta.xml
<CustomField>
    <fullName>Target_Change__c</fullName>
    <description>The type of change to monitor for in the targeted field.</description>
    <label>Target Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any change</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Not equal to</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Does not contain</fullName>
            </value>
            <value>
                <fullName>Starts with</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>