force-app/main/default/objects/Notice_Rule__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>The field to be monitored on the target records.</description>
    <label>Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>