force-app/main/default/objects/Notice_Rule__c/fields/Target_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Type__c</fullName>
    <description>The type of record (i.e. object) the rule applies to.</description>
    <label>Target Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>