force-app/main/default/objects/Notice_Rule__c/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <description>Value used for comparison to target field value.</description>
    <label>Target Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>