force-app/main/default/objects/Notice_Rule__c/validationRules/Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields</fullName>
    <active>true</active>
    <description>Check if required fields are blank</description>
    <errorConditionFormula>OR(ISBLANK(TEXT(Target_Record_Type__c)), ISBLANK(Target_Field__c), ISBLANK(TEXT(Target_Change__c)))</errorConditionFormula>
    <errorMessage>Please enter all required fields (*)</errorMessage>
</ValidationRule>