force-app/main/default/objects/Notice_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Target_Record_Type__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Target_Change__c</columns>
    <columns>Target_Value__c</columns>
    <columns>Email__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>